# cinebooker

./: .env.example  .env.test  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
.github/: dependabot.yml
src/: .pylintrc  Makefile  cli.py  config.py  database.py  extensions.py  pyproject.toml
src/app/: __init__.py  di_container.py  exceptions.py
src/app/celery/: __init__.py  celery.py  tasks.py
src/app/cli/: seeder_cli.py
src/app/helpers/: password_handler.py
src/app/migrations/: env.py
src/app/migrations/versions/: 094c362f322b_update_provider_payment_if_from_payment_.py  103c2ba0c2ba_add_datetime_and_inactive_fields_in_.py  60d455b512c2_add_datetime_fields_in_payment_model.py  a3869ddfda8d_update_discount_expires_at_data_type.py  a9d10f5882a9_update_ticket_model.py  be0ca7ba8e5d_add_code_as_unique_field_in_invoice_.py  c00ec4af797d_initial_migration.py  dd268fe984df_add_datetime_and_inactive_fields_in_.py  e1757b51be8b_update_auth_user_and_customer_tables.py  f3b4d395d0ab_add_datetime_fields_in_booking_seat_.py
src/app/models/: __init__.py  auth_user.py  booking.py  core.py  customer.py  discount.py  invoice.py  movie.py  payment.py  screen.py  seat.py  showtime.py  ticket.py
src/app/providers/: paypal_provider.py  stripe_provider.py
src/app/repositories/: auth_user_repository.py  booking_repository.py  booking_seat_repository.py  core.py  customer_repository.py  discount_repository.py  invoice_item_repository.py  invoice_repository.py  movie_repository.py  payment_repository.py  screen_repository.py  seat_repository.py  showtime_repository.py  ticket_repository.py
src/app/routers/: base.py  booking_router.py  booking_seat_router.py  customer_router.py  discount_router.py  movie_router.py  paypal_router.py  screen_router.py  seat_router.py  showtime_router.py  stripe_router.py  ticket_router.py
src/app/schemas/: auth_user_schemas.py  booking_schemas.py  booking_seat_schemas.py  core.py  customer_schemas.py  discount_schemas.py  invoice_schemas.py  movie_schemas.py  payment_schemas.py  paypal_schemas.py  screen_schemas.py  seat_schemas.py  showtime_schemas.py  stripe_schemas.py  ticket_schemas.py
src/app/services/: auth_user_service.py  booking_seat_service.py  booking_service.py  core.py  customer_service.py  discount_service.py  invoice_item_service.py  invoice_service.py  movie_service.py  payment_service.py  price_calculator_service.py  screen_service.py  seat_service.py  showtime_service.py  ticket_service.py
src/app/utils/: __init__.py  constants.py  financials.py
src/templates/mails/: tickets.html
src/tests/: conftest.py
src/tests/unit/: test_financials.py
(+80 files in other folders)
