[project]
name = "cinebooker"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery[redis]>=5.5.3",  # NOTE: redis python package cannot be updated until a new celery version is released
    "dependency-injector>=4.46.0",
    "fastapi-mail>=1.5.8",
    "fastapi[standard]>=0.115.11",
    "iso4217>=1.14.20250512",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "qrcode[pil]>=8.2",
    "sqlmodel>=0.0.23",
    "stripe>=13.0.1",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "factory-boy>=3.3.3",
    "faker>=36.1.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
]
