[project]
name = "cinebooker"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery[redis]>=5.6.3",  # NOTE: redis python package cannot be updated until a new celery version is released
    "dependency-injector>=4.46.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.1",
    "iso4217>=1.14.20250512",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
    "qrcode[pil]>=8.2",
    "sqlmodel>=0.0.23",
    "stripe>=15.1.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "factory-boy>=3.3.3",
    "faker>=40.19.1",
    "pre-commit>=4.6.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
]
