[project]
name = "cinebooker"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery[redis]>=5.6.3",  # NOTE: redis python package cannot be updated until a new celery version is released
    "dependency-injector>=4.46.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.137.2",
    "iso4217>=1.14.20250512",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
    "qrcode[pil]>=8.2",
    "sqlmodel>=0.0.23",
    "stripe>=15.2.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "factory-boy>=3.3.3",
    "faker>=40.23.0",
    "pre-commit>=4.6.0",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
    "pytest-xdist>=3.8.0",
]
